manifests/networkpolicy/default-deny.yml
# Blocks all ingress/egress for all pods in the demo namespace.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: demo-network-policy
  namespace: demo
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
