manifests/networkpolicy/simple-network-policy.yml
# This policy blocks all ingress/egress from all pods in demo namespace
# Ingress/Egress is allowed from pods with app:nginx label though.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: demo-network-policy
  namespace: demo
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: nginx
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: nginx
