manifests/networkpolicy/simply-network-policy.yml
# This policy blocks all ingress/egress from pods with app:demo label in demo namespace
# Ingress is allowed from pods with run:client label though.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: demo-network-policy
  namespace: demo
spec:
  podSelector:
    matchLabels:
      app: demo
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              run: client
